protocols/tests/adders/adder_d0/illegal_assignment.out
error: Cannot observe forbidden port 's' after assigning DontCare to a combinationally dependent input
   ┌─ adders/adder_d0/add_d0.prot:30:7
   │
30 │   if (DUT.s == 32'b0) {
   │       ^^^^^ Cannot observe forbidden port 's' after assigning DontCare to a combinationally dependent input

